--- a/client/public/styles/youtube-music.css
+++ b/client/public/styles/youtube-music.css
@@ -83,7 +83,7 @@ header {
 .flow-header {
   display: flex;
   justify-content: space-around;
-  margin-top: 10px;
+  margin-top: -20px;
   color: black;
   font-size: 30px;
 }
@@ -129,4 +129,13 @@ header {
 
 #playlist-button:active {
   background-color: #323232;
+}
+
+.invalid-url {
+  color: red;
+  display: flex;
+  font-size: 15px;
+  align-items: baseline;
+  justify-content: center;
+  margin-bottom: 28px;
 }
