--- a/client/public/styles/index.css
+++ b/client/public/styles/index.css
@@ -5,7 +5,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
-  background-image: url("background.png");
+  background-image: url("images/background.png");
   background-position: 0, -100%;
   height: 100vh;
   width: 100%;
